python/vibeqc/_native.py


    void_pp = ctypes.POINTER(ctypes.c_void_p)
    library.vibeqc_get_abi_version.restype = ctypes.c_uint32
    library.vibeqc_status_message.argtypes = [ctypes.c_int]
    library.vibeqc_status_message.restype = ctypes.c_char_p
    library.vibeqc_method_available.argtypes = [ctypes.c_int, ctypes.POINTER(ctypes.c_int32)]
    library.vibeqc_method_available.restype = ctypes.c_int
    library.vibeqc_method_get_capabilities.argtypes = [
        ctypes.c_int,
        ctypes.POINTER(MethodCapabilitiesDescriptor),
    ]
    library.vibeqc_method_get_capabilities.restype = ctypes.c_int
    library.vibeqc_context_create.argtypes = [ctypes.POINTER(ContextDescriptor), void_pp]
    library.vibeqc_context_create.restype = ctypes.c_int
    library.vibeqc_context_destroy.argtypes = [ctypes.c_void_p]
    library.vibeqc_system_create.argtypes = [
        ctypes.c_void_p,
        ctypes.POINTER(SystemDescriptor),
        void_pp,
    ]
    library.vibeqc_system_create.restype = ctypes.c_int
    library.vibeqc_system_destroy.argtypes = [ctypes.c_void_p]
    library.vibeqc_calculation_prepare.argtypes = [
        ctypes.c_void_p,
        ctypes.c_void_p,
        ctypes.POINTER(MethodDescriptor),
        void_pp,
    ]
    library.vibeqc_calculation_prepare.restype = ctypes.c_int
    library.vibeqc_calculation_destroy.argtypes = [ctypes.c_void_p]
    library.vibeqc_calculation_execute.argtypes = [
        ctypes.c_void_p,
        ctypes.POINTER(ResultDescriptor),
    ]
    library.vibeqc_calculation_execute.restype = ctypes.c_int
    library.vibeqc_batch_prepare.argtypes = [
        ctypes.c_void_p,
        ctypes.POINTER(ctypes.c_void_p),
        ctypes.c_uint32,
        ctypes.POINTER(MethodDescriptor),
        ctypes.c_uint32,
        void_pp,
    ]
    library.vibeqc_batch_prepare.restype = ctypes.c_int
    library.vibeqc_batch_destroy.argtypes = [ctypes.c_void_p]
    library.vibeqc_batch_get_system_count.argtypes = [ctypes.c_void_p]
    library.vibeqc_batch_get_system_count.restype = ctypes.c_uint32
    library.vibeqc_batch_get_last_shell_class_profile.argtypes = [
        ctypes.c_void_p,
        ctypes.POINTER(ShellClassProfileEntry),
        ctypes.c_uint32,
    ]
    library.vibeqc_batch_get_last_shell_class_profile.restype = ctypes.c_int
    library.vibeqc_batch_get_last_ppps_queue_profile.argtypes = [
        ctypes.c_void_p,
        ctypes.POINTER(PppsQueueProfile),
    ]
    library.vibeqc_batch_get_last_ppps_queue_profile.restype = ctypes.c_int
    library.vibeqc_batch_get_last_eigensolver_diagnostics.argtypes = [
        ctypes.c_void_p,
        ctypes.POINTER(EigensolverDiagnostic),
        ctypes.c_uint32,
        ctypes.POINTER(ctypes.c_uint32),
    ]
    library.vibeqc_batch_get_last_eigensolver_diagnostics.restype = ctypes.c_int
    library.vibeqc_batch_clear_warm_starts.argtypes = [ctypes.c_void_p]
    library.vibeqc_batch_clear_warm_starts.restype = ctypes.c_int
    library.vibeqc_batch_set_warm_start_updates.argtypes = [
        ctypes.c_void_p,
        ctypes.c_int32,
    ]
    library.vibeqc_batch_set_warm_start_updates.restype = ctypes.c_int
    library.vibeqc_batch_execute.argtypes = [
        ctypes.c_void_p,
        ctypes.POINTER(BatchInputDescriptor),
        ctypes.c_uint32,
        ctypes.POINTER(BatchItemResultDescriptor),
        ctypes.c_uint32,
    ]
    library.vibeqc_batch_execute.restype = ctypes.c_int
    if library.vibeqc_get_abi_version() != ABI_VERSION:
        raise RuntimeError("VIBEQC Python/native ABI version mismatch")
    return library


def check(library: ctypes.CDLL, status: int) -> None:
    if status != STATUS_SUCCESS:
        message = library.vibeqc_status_message(status).decode("utf-8")
        if status == STATUS_NOT_IMPLEMENTED:
            raise NotImplementedError(f"VIBEQC error {status}: {message}")
        raise RuntimeError(f"VIBEQC error {status}: {message}")
